<?xml version="1.0"?>
<package>
  <name>robot_bridge</name>
  <version>1.0.0</version>
  <description>The robot_bridge package</description>

  <author email="inz.mateusz.przybyla@gmail.com">Mateusz Przybyla</author>
  <maintainer email="inz.mateusz.przybyla@gmail.com">Mateusz Przybyla</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
